k8s/cmpapi-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cmpapi
  labels:
    app: cmpapi
  namespace: cmpapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cmpapi
      task: cmpapi
  template:
    metadata:
      labels:
        app: cmpapi
        task: cmpapi
        version: v1.0
    spec:
      containers:
      - image: hydria/cmpapi:latest
        name: cmpapi
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
