k8s/cmpapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cmpapi
  name: cmpapi
  namespace: cmpapi
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: cmpapi
