k8s/cmpapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cmpapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  namespace: cmpapi
spec:
  rules:
  - host: cmpapi.imina.cat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cmpapi
            port:
              number: 80
  tls:
  - secretName: cmpapi-tls-cert
    hosts:
      - cmpapi.imina.cat
